--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^33.0.0",
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
@@ -19,5 +20,8 @@
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "ckeditor5-build-laravel-image": "^1.0.1"
     }
 }
